--- a/ToDo.html
+++ b/ToDo.html
@@ -10,7 +10,7 @@
         <div class="js-clock">
             <h1></h1>
             <!-- 날씨  /  weather.js -->
-            <span class="js-weather"> </span>
+            <span class="js-weather">ㅤ</span>
         </div>
 
         <!-- 사용자 이름  /  greetings.js -->
